Updated 2 files via CloudCannon

--- a/nl/portfolio/petervermaat/index.html
+++ b/nl/portfolio/petervermaat/index.html
@@ -50,7 +50,7 @@
 
 <title>dichter Vermaat | Usecue web development</title>
 
-<meta name="description" content="Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat them...">
+<meta name="description" content="Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Vijf jaar nadat ik voor hem een Envato WordPress thema had geïnstalleerd, vroeg hij me om ...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/nl/portfolio/petervermaat/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat them..."/>
+<meta property="og:description" content="Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Vijf jaar nadat ik voor hem een Envato WordPress thema had geïnstalleerd, vroeg hij me om ..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="dichter Vermaat" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/petervermaat1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/nl/portfolio/petervermaat/" />
-<meta name="twitter:description" content="Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat them..." />
+<meta name="twitter:description" content="Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Vijf jaar nadat ik voor hem een Envato WordPress thema had geïnstalleerd, vroeg hij me om ..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -168,7 +168,7 @@
 
 <h1 class="large">dichter Vermaat</h1>
 
-<p>Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was niet responsive en gebruikte WP Touch om toch een mobiele website weer te geven (met alle beperkingen vandien). Hij wilde graag een update van zijn website. Ik heb het thema nagebouwd in Jekyll en heb er het CloudCannon CMS aan gekoppeld. Daarnaast heb ik zijn pixellogo omgezet naar vector, alle javascript herschreven, het thema responsive gemaakt en heb ik een webshopje aan zijn website toegevoegd (inclusief productpresentaties). Peter was zeer tevreden met het eindresultaat en niet onbelangrijk: ik ook! Deze website kan makkelijk weer 5 jaar mee.</p>
+<p>Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Vijf jaar nadat ik voor hem een Envato WordPress thema had geïnstalleerd, vroeg hij me om zijn website te updaten. Ik heb het (inmiddels verouderde) thema nagebouwd in Jekyll en heb er het CloudCannon CMS aan gekoppeld. Daarnaast heb ik zijn pixellogo omgezet naar vector, alle javascript herschreven, het thema responsive gemaakt en heb ik een webshopje aan zijn website toegevoegd (inclusief productpresentaties). Peter was zeer tevreden met het eindresultaat en niet onbelangrijk: ik ook! Deze website kan makkelijk weer 5 jaar mee.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
