--- a/portfolio/petervermaat/index.html
+++ b/portfolio/petervermaat/index.html
@@ -50,7 +50,7 @@
 
 <title>poet Vermaat | Usecue web development</title>
 
-<meta name="description" content="Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsons...">
+<meta name="description" content="Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Five years after I installed an Envato WordPress theme for him, he asked me to update his ...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/portfolio/petervermaat/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsons..."/>
+<meta property="og:description" content="Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Five years after I installed an Envato WordPress theme for him, he asked me to update his ..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="poet Vermaat" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/petervermaat1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/petervermaat/" />
-<meta name="twitter:description" content="Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsons..." />
+<meta name="twitter:description" content="Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Five years after I installed an Envato WordPress theme for him, he asked me to update his ..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -168,7 +168,7 @@
 
 <h1 class="large">poet Vermaat</h1>
 
-<p>Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and used WP Touch to display a mobile website (with limitations). He asked me to update his website. I rebuild his theme in Jekyll and connected the CloudCannon CMS. I also transformed his pixel logo into vectors, rewrote all javascript, made the theme responsive and added a little webshop (including product presentations). Peter was very pleased with the end result and not unimportant: so was I! This website will easily last another 5 years.</p>
+<p>Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Five years after I installed an Envato WordPress theme for him, he asked me to update his website. I rebuild his (outdated) theme in Jekyll and connected the CloudCannon CMS. I also transformed his pixel logo into vectors, rewrote all javascript, made the theme responsive and added a little webshop (including product presentations). Peter was very pleased with the end result and not unimportant: so was I! This website will easily last another 5 years.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
