--- a/nl/portfolio/petervermaat/index.html
+++ b/nl/portfolio/petervermaat/index.html
@@ -168,7 +168,7 @@
 
 <h1 class="large">dichter Vermaat</h1>
 
-<p>Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Vijf jaar nadat ik voor hem <a href="/uploads/rockwell.jpg">een Envato WordPress thema</a> had geïnstalleerd, vroeg hij me om zijn website te updaten. Ik heb het (inmiddels verouderde) thema nagebouwd in Jekyll en heb er het CloudCannon CMS aan gekoppeld. Daarnaast heb ik zijn pixellogo omgezet naar vector, alle javascript herschreven, het thema responsive gemaakt en heb ik een webshop toegevoegd (inclusief productpresentaties). Peter was zeer tevreden met het eindresultaat en niet onbelangrijk: ik ook! Deze website kan makkelijk weer vijf jaar mee.</p>
+<p>Peter Vermaat is dichter, verteller, poppenspeler en theatermaker. Vijf jaar nadat ik voor hem <a href="/uploads/rockwell.jpg">een Envato WordPress thema</a> had geïnstalleerd, vroeg hij me om zijn website te updaten. Ik heb het (inmiddels verouderde) thema nagebouwd in Jekyll en heb er het CloudCannon CMS aan gekoppeld. Daarnaast heb ik zijn pixellogo omgezet naar vector, alle javascript herschreven, het thema responsive gemaakt en heb ik een webshop toegevoegd (inclusief productpresentaties). Peter was zeer tevreden met het eindresultaat. Deze website kan makkelijk weer vijf jaar mee.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
