--- a/nl/portfolio/joopvdschee/index.html
+++ b/nl/portfolio/joopvdschee/index.html
@@ -168,7 +168,7 @@
 
 <h1 class="large">professor Joop</h1>
 
-<p>Deze <a href="/blog/websites-that-load-instantly/">razendsnelle website</a> heb ik ontworpen en gebouwd voor mijn vader: <a href="https://nl.wikipedia.org/wiki/Joop_van_der_Schee">professor Joop van der Schee</a>. De website geeft een overzicht van zijn mijlpalen en publicaties tijdens zijn werk aan de Vrije Universiteit Amsterdam. De pagina’s laden in minder dan 0,2 seconden van waar ook ter wereld, zijn slechts 77kb groot en hebben een perfecte Google score. De website is deels statisch en deels Jekyll en is uitgevoerd in twee talen. Hij kan zijn website bijhouden via het <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
+<p>Deze <a href="/blog/websites-that-load-instantly/">razendsnelle website</a> heb ik ontworpen en gebouwd voor mijn vader: <a href="https://nl.wikipedia.org/wiki/Joop_van_der_Schee">professor Joop van der Schee</a>. De website geeft een overzicht van zijn mijlpalen en publicaties tijdens zijn werk aan de Vrije Universiteit Amsterdam. De pagina’s laden in minder dan 0,2 seconden van waar ook ter wereld, zijn slechts 77kb groot en hebben een perfecte <a href="/blog/how-to-get-a-100-google-lighthouse-score/">Google score</a>. De website is deels statisch en deels Jekyll en is uitgevoerd in twee talen. Hij kan zijn website bijhouden via het <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
