--- a/portfolio/usecue/index.html
+++ b/portfolio/usecue/index.html
@@ -168,7 +168,7 @@
 
 <h1 class="large">the usecue website</h1>
 
-<p>This website itself should <em>absolutely</em> be in my portfolio. It is <a href="/blog/a-tribute-to-the-web/">a tribute to the web</a> and is designed and coded by myself. This website is hosted on special infrastructure to get <a href="/blog/websites-that-load-instantly/">the best performance possible</a>. Most pages will load in under 0.2 seconds (from within Europe). The pages are only 41kb large and have a perfect Google score.</p>
+<p>This website itself should <em>absolutely</em> be in my portfolio. It is <a href="/blog/a-tribute-to-the-web/">a tribute to the web</a> and is designed and coded by myself. This website is hosted on special infrastructure to get <a href="/blog/websites-that-load-instantly/">the best performance possible</a>. Most pages will load in under 0.2 seconds (from within Europe). The pages are only 41kb large and have a perfect <a href="/blog/how-to-get-a-100-google-lighthouse-score/">Google score</a>.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
