--- a/portfolio/petervermaat/index.html
+++ b/portfolio/petervermaat/index.html
@@ -168,7 +168,7 @@
 
 <h1 class="large">poet Vermaat</h1>
 
-<p>Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Five years after I set him up with an <a href="/uploads/rockwell.jpg">Envato WordPress theme</a>, he asked me to update his website. I rebuild his (outdated) theme in Jekyll and connected the <a href="https://cloudcannon.com/">CloudCannon CMS</a>. I also transformed his pixel logo into vectors, rewrote all javascript, made the theme responsive and added a webshop (including product presentations). Peter was very pleased with the end result. This website will easily last another five years.</p>
+<p>Peter Vermaat is a poet, storyteller, puppeteer and theatre maker. Five years after I set him up with an <a href="/uploads/rockwell.jpg">Envato WordPress theme</a>, he asked me to update his website. I rebuild his (outdated) theme in Jekyll and connected the <a href="https://cloudcannon.com/">CloudCannon CMS</a>. I also transformed his pixel logo into vectors, rewrote all javascript, made the theme responsive and added a webshop (including product presentations). This updated website will easily last another five years.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
