--- a/nl/index.html
+++ b/nl/index.html
@@ -48,9 +48,9 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>Ik ben een web developer uit Amsterdam. | Usecue web development</title>
+<title>Ik ben een web performance engineer uit Amsterdam. | Usecue web development</title>
 
-<meta name="description" content="Ik maak en host elegante, zelfgeprogrammeerde websites en webapplicaties voor mijn klanten. Meer weten?">
+<meta name="description" content="Ik bouw en host snelle, elegante websites en webapplicaties voor mijn klanten. Meer weten?">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -59,19 +59,19 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="Ik ben een web developer uit Amsterdam."/>
+<meta property="og:title" content="Ik ben een web performance engineer uit Amsterdam."/>
 
 <meta property="og:url" content="https://www.usecue.com/nl/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Ik maak en host elegante, zelfgeprogrammeerde websites en webapplicaties voor mijn klanten. Meer weten?"/>
+<meta property="og:description" content="Ik bouw en host snelle, elegante websites en webapplicaties voor mijn klanten. Meer weten?"/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="Ik ben een web developer uit Amsterdam." />
+<meta name="twitter:title" content="Ik ben een web performance engineer uit Amsterdam." />
 
 <meta name="twitter:url" content="https://www.usecue.com/nl/" />
-<meta name="twitter:description" content="Ik maak en host elegante, zelfgeprogrammeerde websites en webapplicaties voor mijn klanten. Meer weten?" />
+<meta name="twitter:description" content="Ik bouw en host snelle, elegante websites en webapplicaties voor mijn klanten. Meer weten?" />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -110,9 +110,9 @@
         <div id="content">
 
 
-<h1>Ik ben een web developer uit Amsterdam.</h1>
+<h1>Ik ben een web performance engineer uit Amsterdam.</h1>
 
-<p>Ik maak en host elegante, zelfgeprogrammeerde websites en webapplicaties voor mijn klanten. <a href="/nl/over/">Meer weten?</a></p>
+<p>Ik bouw en host snelle, elegante websites en webapplicaties voor mijn klanten. <a href="/nl/over/">Meer weten?</a></p>
 
 
 
