--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>I am a web performance engineer from Amsterdam. | Usecue web development</title>
+<title>Web performance expert from Amsterdam | Usecue web development</title>
 
-<meta name="description" content="I build and host fast, elegant websites and web applications for my clients. Interested?">
+<meta name="description" content="I build and host blazingly fast, elegant websites and web applications for my clients. Interested?">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -59,19 +59,19 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="I am a web performance engineer from Amsterdam."/>
+<meta property="og:title" content="Web performance expert from Amsterdam"/>
 
 <meta property="og:url" content="https://www.usecue.com/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="I build and host fast, elegant websites and web applications for my clients. Interested?"/>
+<meta property="og:description" content="I build and host blazingly fast, elegant websites and web applications for my clients. Interested?"/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="I am a web performance engineer from Amsterdam." />
+<meta name="twitter:title" content="Web performance expert from Amsterdam" />
 
 <meta name="twitter:url" content="https://www.usecue.com/" />
-<meta name="twitter:description" content="I build and host fast, elegant websites and web applications for my clients. Interested?" />
+<meta name="twitter:description" content="I build and host blazingly fast, elegant websites and web applications for my clients. Interested?" />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -110,9 +110,9 @@
         <div id="content">
 
 
-<h1>I am a web performance engineer from Amsterdam.</h1>
+<h1>Web performance expert from Amsterdam</h1>
 
-<p>I build and host fast, elegant websites and web applications for my clients. <a href="/about/">Interested?</a></p>
+<p>I build and host blazingly fast, elegant websites and web applications for my clients. <a href="/about/">Interested?</a></p>
 
 
 
