Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <title>Web performance expert from Amsterdam | Usecue web development</title>
 
-<meta name="description" content="I build and host blazingly fast, elegant websites and web applications for my clients. Interested?">
+<meta name="description" content="I build and host blazingly fast, elegant websites and web applications. Interested?">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="I build and host blazingly fast, elegant websites and web applications for my clients. Interested?"/>
+<meta property="og:description" content="I build and host blazingly fast, elegant websites and web applications. Interested?"/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Web performance expert from Amsterdam" />
 
 <meta name="twitter:url" content="https://www.usecue.com/" />
-<meta name="twitter:description" content="I build and host blazingly fast, elegant websites and web applications for my clients. Interested?" />
+<meta name="twitter:description" content="I build and host blazingly fast, elegant websites and web applications. Interested?" />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -112,7 +112,7 @@
 
 <h1>Web performance expert from Amsterdam</h1>
 
-<p>I build and host blazingly fast, elegant websites and web applications for my clients. <a href="/about/">Interested?</a></p>
+<p>I build and host blazingly fast, elegant websites and web applications. <a href="/about/">Interested?</a></p>
 
 
 
