--- a/nl/index.html
+++ b/nl/index.html
@@ -50,7 +50,7 @@
 
 <title>Web performance expert uit Amsterdam | Usecue web development</title>
 
-<meta name="description" content="Ik bouw en host razendsnelle, elegante websites en webapplicaties voor mijn klanten. Meer weten?">
+<meta name="description" content="Ik bouw en host razendsnelle, elegante websites en webapplicaties. Meer weten?">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/nl/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Ik bouw en host razendsnelle, elegante websites en webapplicaties voor mijn klanten. Meer weten?"/>
+<meta property="og:description" content="Ik bouw en host razendsnelle, elegante websites en webapplicaties. Meer weten?"/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Web performance expert uit Amsterdam" />
 
 <meta name="twitter:url" content="https://www.usecue.com/nl/" />
-<meta name="twitter:description" content="Ik bouw en host razendsnelle, elegante websites en webapplicaties voor mijn klanten. Meer weten?" />
+<meta name="twitter:description" content="Ik bouw en host razendsnelle, elegante websites en webapplicaties. Meer weten?" />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -112,7 +112,7 @@
 
 <h1>Web performance expert uit Amsterdam</h1>
 
-<p>Ik bouw en host razendsnelle, elegante websites en webapplicaties voor mijn klanten. <a href="/nl/over/">Meer weten?</a></p>
+<p>Ik bouw en host razendsnelle, elegante websites en webapplicaties. <a href="/nl/over/">Meer weten?</a></p>
 
 
 
