Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>Web performance expert from Amsterdam | Usecue web development</title>
+<title>Website performance expert from Amsterdam | Usecue web development</title>
 
 <meta name="description" content="I build and host blazing fast websites and web applications. Interested?">
 
@@ -59,7 +59,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="Web performance expert from Amsterdam"/>
+<meta property="og:title" content="Website performance expert from Amsterdam"/>
 
 <meta property="og:url" content="https://www.usecue.com/"/>
 <meta property="og:type" content="article">
@@ -68,7 +68,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="Web performance expert from Amsterdam" />
+<meta name="twitter:title" content="Website performance expert from Amsterdam" />
 
 <meta name="twitter:url" content="https://www.usecue.com/" />
 <meta name="twitter:description" content="I build and host blazing fast websites and web applications. Interested?" />
@@ -110,7 +110,7 @@
         <div id="content">
 
 
-<h1>Web performance expert from Amsterdam</h1>
+<h1>Website performance expert from Amsterdam</h1>
 
 <p>I build and host <a href="/blog/websites-that-load-instantly/">blazing fast websites</a> and web applications. <a href="/about/">Interested?</a></p>
 
