--- a/nl/index.html
+++ b/nl/index.html
@@ -48,7 +48,7 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>Web performance expert uit Amsterdam | Usecue web development</title>
+<title>Website performance expert uit Amsterdam | Usecue web development</title>
 
 <meta name="description" content="Ik bouw en host razendsnelle websites en webapplicaties. Meer weten?">
 
@@ -59,7 +59,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="Web performance expert uit Amsterdam"/>
+<meta property="og:title" content="Website performance expert uit Amsterdam"/>
 
 <meta property="og:url" content="https://www.usecue.com/nl/"/>
 <meta property="og:type" content="article">
@@ -68,7 +68,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="Web performance expert uit Amsterdam" />
+<meta name="twitter:title" content="Website performance expert uit Amsterdam" />
 
 <meta name="twitter:url" content="https://www.usecue.com/nl/" />
 <meta name="twitter:description" content="Ik bouw en host razendsnelle websites en webapplicaties. Meer weten?" />
@@ -110,7 +110,7 @@
         <div id="content">
 
 
-<h1>Web performance expert uit Amsterdam</h1>
+<h1>Website performance expert uit Amsterdam</h1>
 
 <p>Ik bouw en host <a href="/blog/websites-that-load-instantly/">razendsnelle websites</a> en webapplicaties. <a href="/nl/over/">Meer weten?</a></p>
 
