--- a/nl/over/index.html
+++ b/nl/over/index.html
@@ -116,7 +116,7 @@
 
 <p>Ik ben fan van Jekyll (een website generator). Om mede Jekyll enthousiastelingen te helpen, heb ik <a href="https://jekyllcodex.org">jekyllcodex.org</a> opgezet en beantwoord ik Jekyll-gerelateerde vragen op <a href="http://stackoverflow.com/users/2397550/joosts">Stack Overflow</a>. <a href="https://cloudcannon.com/">CloudCannon</a> (een online CMS systeem voor Jekyll) heeft mij opgenomen als ‘Jekyll expert’ op zijn ‘<a href="https://cloudcannon.com/experts/">experts page</a>’. Ik was bovendien één van de sprekers van <a href="https://jekyllconf.com/">JekyllConf 2019</a>.</p>
 
-<p>Naast Jekyll/CloudCannon websites ontwikkel ik o.a. WordPress-, Issuu-, MailChimp-, Shopify- en maatwerkoplossingen. Een paar van mijn laatste projecten zijn: een <a href="https://www.invoicelion.org/nl/">open source online facturatiepakket</a>, genaamd ‘Invoice Lion’, een tool om je <a href="https://profilepageimages.usecue.com/">Instagram feed op je website</a> te zetten, genaamd ‘PPI Loader’ en een <a href="https://www.onlinemagazinemaker.com/">platform voor het maken van online magazines</a>, genaamd ‘Online Magazine Maker’.</p>
+<p>Naast Jekyll/CloudCannon websites ontwikkel ik o.a. WordPress- en maatwerkoplossingen. Een paar van mijn laatste projecten zijn: een <a href="https://www.invoicelion.org/nl/">open source online facturatiepakket</a>, genaamd ‘Invoice Lion’, een tool om je <a href="https://profilepageimages.usecue.com/">Instagram feed op je website</a> te zetten, genaamd ‘PPI Loader’ en een <a href="https://www.onlinemagazinemaker.com/">platform voor het maken van online magazines</a>, genaamd ‘Online Magazine Maker’.</p>
 
 <p> </p>
 
