--- a/nl/portfolio/petervermaat/index.html
+++ b/nl/portfolio/petervermaat/index.html
@@ -107,7 +107,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://www.joop.vdschee.nl/" title="View the website of dichter Vermaat" aria-label="View the website of dichter Vermaat">
+    <a href="https://petervermaat.nl/" title="View the website of dichter Vermaat" aria-label="View the website of dichter Vermaat">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/petervermaat2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/petervermaat1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -186,7 +186,7 @@
     </div>
 </div>
 
-<p style="padding-top: 1.4em;"><br /><a href="https://www.joop.vdschee.nl/" rel="noopener" target="_blank" class="btn" style="background: #333;">bekijk project</a></p>
+<p style="padding-top: 1.4em;"><br /><a href="https://petervermaat.nl/" rel="noopener" target="_blank" class="btn" style="background: #333;">bekijk project</a></p>
 
 
 
