--- a/portfolio/stemnjr/index.html
+++ b/portfolio/stemnjr/index.html
@@ -51,7 +51,7 @@
 
 <title>online voting | Usecue web development</title>
 
-<meta name="description" content="I have built this perfectly scoring voting website for the Dutch National Youth Council, which allows you to cast votes for multiple kandidates. I made the v...">
+<meta name="description" content="I have built this perfectly scoring voting website for the Dutch National Youth Council, which allows you to cast votes for multiple candidates. I made the v...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -65,14 +65,14 @@
 <meta property="og:url" content="https://www.usecue.com/portfolio/stemnjr/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="I have built this perfectly scoring voting website for the Dutch National Youth Council, which allows you to cast votes for multiple kandidates. I made the v..."/>
+<meta property="og:description" content="I have built this perfectly scoring voting website for the Dutch National Youth Council, which allows you to cast votes for multiple candidates. I made the v..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="online voting" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/stemnjr1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/stemnjr/" />
-<meta name="twitter:description" content="I have built this perfectly scoring voting website for the Dutch National Youth Council, which allows you to cast votes for multiple kandidates. I made the v..." />
+<meta name="twitter:description" content="I have built this perfectly scoring voting website for the Dutch National Youth Council, which allows you to cast votes for multiple candidates. I made the v..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -169,7 +169,7 @@
 
 <h1 class="large">online voting</h1>
 
-<p>I have built this perfectly scoring voting website for the Dutch National Youth Council, which allows you to cast votes for multiple kandidates. I made the voting very accessible by omitting SMS verification. Ofcourse that required some (extra) measurements to detect invalid votes. How that works? That is a secret.</p>
+<p>I have built this perfectly scoring voting website for the Dutch National Youth Council, which allows you to cast votes for multiple candidates. I made the voting very accessible by omitting SMS verification. Ofcourse that required some (extra) measurements to detect invalid votes. How that works? That is a secret.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
