--- a/nl/portfolio/studio-inhout/index.html
+++ b/nl/portfolio/studio-inhout/index.html
@@ -202,7 +202,7 @@
             
             <a id="nextlink" href="/nl/portfolio/transactility/">volgende<span class="desktop">: Transactility</span><span class="mobile"> portfolio item</span></a>
             <a id="nextlinktop" href="/nl/portfolio/transactility/">volgende item</a>
-            <a id="prevlinktop" href="/nl/portfolio/stemnjr/">vorige item</a>
+            <a id="prevlinktop" href="/nl/portfolio/petervermaat/">vorige item</a>
         
         <a id="scrolltotop" href="#top">Scroll naar boven</a>
         <a id="lightmode" href="#" onclick="toggleLightmode()" title="verander kleur"></a>
