--- a/portfolio/studio-inhout/index.html
+++ b/portfolio/studio-inhout/index.html
@@ -202,7 +202,7 @@
             
             <a id="nextlink" href="/portfolio/transactility/">next<span class="desktop">: Transactility</span><span class="mobile"> portfolio item</span></a>
             <a id="nextlinktop" href="/portfolio/transactility/">next item</a>
-            <a id="prevlinktop" href="/portfolio/stemnjr/">previous item</a>
+            <a id="prevlinktop" href="/portfolio/petervermaat/">previous item</a>
         
         <a id="scrolltotop" href="#top">Scroll to top</a>
         <a id="lightmode" href="#" onclick="toggleLightmode()" title="change color"></a>
