--- a/nl/portfolio/de-vos-en-partners/index.html
+++ b/nl/portfolio/de-vos-en-partners/index.html
@@ -202,7 +202,7 @@
             
             <a id="nextlink" href="/nl/portfolio/lucass-amsterdam/">volgende<span class="desktop">: Luca's services</span><span class="mobile"> portfolio item</span></a>
             <a id="nextlinktop" href="/nl/portfolio/lucass-amsterdam/">volgende item</a>
-            <a id="prevlinktop" href="/nl/portfolio/zonmw/">vorige item</a>
+            <a id="prevlinktop" href="/nl/portfolio/usecue/">vorige item</a>
         
         <a id="scrolltotop" href="#top">Scroll naar boven</a>
         <a id="lightmode" href="#" onclick="toggleLightmode()" title="verander kleur"></a>
