--- a/portfolio/de-vos-en-partners/index.html
+++ b/portfolio/de-vos-en-partners/index.html
@@ -202,7 +202,7 @@
             
             <a id="nextlink" href="/portfolio/lucass-amsterdam/">next<span class="desktop">: luca's services</span><span class="mobile"> portfolio item</span></a>
             <a id="nextlinktop" href="/portfolio/lucass-amsterdam/">next item</a>
-            <a id="prevlinktop" href="/portfolio/zonmw/">previous item</a>
+            <a id="prevlinktop" href="/portfolio/usecue/">previous item</a>
         
         <a id="scrolltotop" href="#top">Scroll to top</a>
         <a id="lightmode" href="#" onclick="toggleLightmode()" title="change color"></a>
