--- a/portfolio/lucass-amsterdam/index.html
+++ b/portfolio/lucass-amsterdam/index.html
@@ -202,7 +202,7 @@
             
             <a id="nextlink" href="/portfolio/de-reclamefabriek/">next<span class="desktop">: advertising that works</span><span class="mobile"> portfolio item</span></a>
             <a id="nextlinktop" href="/portfolio/de-reclamefabriek/">next item</a>
-            <a id="prevlinktop" href="/portfolio/de-vos-en-partners/">previous item</a>
+            <a id="prevlinktop" href="/portfolio/enovice/">previous item</a>
         
         <a id="scrolltotop" href="#top">Scroll to top</a>
         <a id="lightmode" href="#" onclick="toggleLightmode()" title="change color"></a>
