Updated 'portfolio/enovice/index.html' via CloudCannon

--- a/portfolio/enovice/index.html
+++ b/portfolio/enovice/index.html
@@ -169,7 +169,7 @@
 
 <h1 class="large">eNovice.nl</h1>
 
-<p>Koningshoeven Abbey in the Netherlands has launched an <a href="https://www.adformatie.nl/digital-transformation-tech/ook-op-de-weg-naar-god-blijkt-google-de-gids">award winning</a> online platform for aspiring monks: eNovice. This digital novitiate is a world first, according to the Dutch Trappists. I had the honor of building this website for <a href="https://voordenberg.com/">Studio Voordenberg</a>.</p>
+<p>Koningshoeven Abbey in the Netherlands has launched an <a href="https://www.adformatie.nl/digital-transformation-tech/ook-op-de-weg-naar-god-blijkt-google-de-gids">award winning</a> online platform for aspiring monks: eNovice. This digital novitiate is a world first, according to the Dutch Trappists. I had the honor of building this website together with <a href="https://voordenberg.com/">Studio Voordenberg</a>.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
