--- a/nl/portfolio/lucass-amsterdam/index.html
+++ b/nl/portfolio/lucass-amsterdam/index.html
@@ -202,7 +202,7 @@
             
             <a id="nextlink" href="/nl/portfolio/de-reclamefabriek/">volgende<span class="desktop">: reclame die werkt</span><span class="mobile"> portfolio item</span></a>
             <a id="nextlinktop" href="/nl/portfolio/de-reclamefabriek/">volgende item</a>
-            <a id="prevlinktop" href="/nl/portfolio/de-vos-en-partners/">vorige item</a>
+            <a id="prevlinktop" href="/nl/portfolio/enovice/">vorige item</a>
         
         <a id="scrolltotop" href="#top">Scroll naar boven</a>
         <a id="lightmode" href="#" onclick="toggleLightmode()" title="verander kleur"></a>
